<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>es.usc.citius.lab</groupId>
    <artifactId>hipster</artifactId>
    <packaging>pom</packaging>
    <name>hipster</name>
    <version>0.0.1-SNAPSHOT</version>
    <url>http://github.com/pablormier/hipster</url>
    <modules>
        <module>hipster-collections</module>
        <module>hipster-core</module>
        <module>hipster-jung</module>
    </modules>
    <properties>
        <gpg.skip>true</gpg.skip>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <test.jvm.argLine>
            -server
            -XX:+AggressiveOpts
        </test.jvm.argLine>
    </properties>
    <organization>
        <name>Centro de Investigación en Tecnoloxías da Información (CITIUS), University of Santiago de Compostela</name>
        <url>http://citius.usc.es</url>
    </organization>
    <issueManagement>
        <system>GitHub</system>
        <url>http://github.com/pablormier/hipster/issues</url>
    </issueManagement>
    <inceptionYear>2013</inceptionYear>
    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <prerequisites>
        <maven>3.0.3</maven>
    </prerequisites>
    <scm>
        <connection>scm:git:git@github.com:pablormier/hipster.git</connection>
        <developerConnection>scm:git:git@github.com:pablormier/hipster.git</developerConnection>
        <url>scm:git:git@github.com:pablormier/hipster.git</url>
    </scm>
    <developers>
        <developer>
            <id>pablormier</id>
            <name>Pablo Rodríguez Mier</name>
            <email>pablo.rodriguez.mier@usc.es</email>
            <roles>
                <role>owner</role>
                <role>developer</role>
            </roles>
        </developer>
        <developer>
            <id>adrian_gonzalez</id>
            <name>Adrián González Sieira</name>
            <email>adrian.gonzalez@usc.es</email>
            <roles>
                <role>owner</role>
                <role>developer</role>
            </roles>
        </developer>
    </developers>
    <dependencies>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>14.0.1</version>
        </dependency>

        <!-- Test dependencies -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.11</version>
            <scope>test</scope>
        </dependency>

    </dependencies>
    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>2.2.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>jar-no-fork</goal>
                            <goal>test-jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>2.9</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                    <docencoding>UTF-8</docencoding>
                    <charset>UTF-8</charset>
                    <!-- Doclava specific configuration -->
                    <docletArtifact>
                        <groupId>com.google.doclava</groupId>
                        <artifactId>doclava</artifactId>
                        <version>1.0.5</version>
                    </docletArtifact>
                    <doclet>com.google.doclava.Doclava</doclet>
                    <bootclasspath>${sun.boot.class.path}</bootclasspath>
                    <additionalparam>
                        -quiet
                        -federate JDK http://download.oracle.com/javase/6/docs/api/index.html?
                        -federationxml JDK http://doclava.googlecode.com/svn/static/api/openjdk-6.xml
                        -hdf project.name "${project.name}"
                        -templatedir ${project.basedir}/../src/main/doclava/custom/assets/hipster-template/
                        -d ${project.build.directory}/apidocs
                    </additionalparam>
                    <useStandardDocletOptions>false</useStandardDocletOptions>
                    <additionalJOption>-J-Xmx1024m</additionalJOption>
                </configuration>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!-- Plugin to generate reports of test coverage -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>cobertura-maven-plugin</artifactId>
                <version>2.6</version>
            </plugin>
        </plugins>
    </build>
</project>